--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,12 @@
     margin: 0%;
     padding: 0%;
 }
+
+#main{
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+   background-color:rgb(238,238,238);
+   margin: 25;
+   padding: 25;
+}
