--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,32 @@
 }
 
 #main{
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
+   padding: 15px;
+   margin: 30px 8px;
    background-color:rgb(238,238,238);
-   
+   border-radius: 5px;
+   text-align: center
+   ;
+}
+#img-div{
+    background: white;
+    padding: 10px;
+    margin: 0px;
+}
+#image{
+    height: auto;
+    max-width: 100%;
+    display: block;
+    margin: 0%;
+}
+h3{
+    text-align: center;
+    margin: 2% 0%;
+}
+ul{
+    text-align: left;
+    line-height: 2;
+   margin: 0 auto 50px auto;
+    max-width: 550px;
+    
 }
