--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@
     height: auto;
     max-width: 100%;
     display: block;
-    margin: 0%;
+    margin: 0 auto 50px auto;
+    
 }
 h3{
     text-align: center;
@@ -32,4 +33,11 @@ ul{
    margin: 0 auto 50px auto;
     max-width: 550px;
     
+}
+blockquote{
+    text-align: left;
+    margin: 0 auto 50px auto;
+    font-style: italic;
+    max-width: 550px;
+    line-height: 2;
 }
