--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,45 @@
-*{
-    margin: 0%;
-    padding: 0%;
+* {
+  margin: 0%;
+  padding: 0%;
 }
 
-#main{
-   padding: 15px;
-   margin: 30px 8px;
-   background-color:rgb(238,238,238);
-   border-radius: 5px;
-   text-align: center
-   ;
+#main {
+  padding: 15px;
+  margin: 30px 8px;
+  background-color: rgb(238, 238, 238);
+  border-radius: 5px;
+  text-align: center;
 }
-#img-div{
-    background: white;
-    padding: 10px;
-    margin: 0px;
+
+#img-div {
+  background: white;
+  padding: 10px;
+  margin: 0;
 }
-#image{
-    height: auto;
-    max-width: 100%;
-    display: block;
-    margin: 0 auto 50px auto;
-    
+
+#image {
+  height: auto;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto 50px auto;
 }
-h3{
-    text-align: center;
-    margin: 2% 0%;
+
+h3 {
+  text-align: center;
+  margin: 2% 0%;
 }
-ul{
-    text-align: left;
-    line-height: 2;
-   margin: 0 auto 50px auto;
-    max-width: 550px;
-    
+
+ul {
+  text-align: left;
+  line-height: 2;
+  margin: 0 auto 50px auto;
+  max-width: 550px;
 }
-blockquote{
-    text-align: left;
-    margin: 0 auto 50px auto;
-    font-style: italic;
-    max-width: 550px;
-    line-height: 2;
+
+blockquote {
+  text-align: left;
+  margin: 0 auto 50px auto;
+  font-style: italic;
+  max-width: 550px;
+  line-height: 2;
 }
